objects/Agreement_Legal_Entities__c.object
<CustomObject>
    <fields>
        <fullName>ApplicableExhibit__c</fullName>
        <label>ApplicableExhibit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Signer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreement_Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S_P_Internal_Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>S&amp;P Internal Legal Entity</label>
        <referenceTo>S_P_Internal_Legal_Entity__c</referenceTo>
        <relationshipLabel>Agreement Legal Entities</relationshipLabel>
        <relationshipName>Agreement_Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signature_Date_Tag__c</fullName>
        <label>Signature Date Tag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_FullNameTag__c</fullName>
        <label>Signature FullNameTag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Job_Title_Tag__c</fullName>
        <label>Signature Job Title Tag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Agreement Legal Entities</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement Legal Entities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>